# fuzzywuzzy

./: .gitignore  Makefile  README.md  fuzzer  install  install.sh  pyproject.toml  requirements.txt  writeup.md
.github/workflows/: test.yml
src/fuzzer/: __init__.py  coverage.py  harness.py  mermaid.py  reporter.py  utils.py  wrr.py
src/fuzzer/formats/: __init__.py  base.py
src/fuzzer/harness/: __init__.py  base.py  bench.py  build.sh  build64.sh  harness  harness.c  harness.h  harness_playground.py  harness_playground2.py  harness_playground3.py  hooks.c  hooks.h  inprocess.py  macro_playground.c  popen.py  socket.c  socket.h
src/fuzzer/hunters/: __init__.py  csv.py  jpeg.py  json.py  plaintext.py  whole_text.py  xml.py
src/fuzzer/mutations/: __init__.py  base.py  bitflip.py  buffer_overflow.py  format_specifiers.py  insert.py  keywords.py  known_integers.py  lists.py  numbers.py  repeated_parts.py
tests/: conftest.py  test_fuzzing.py  test_mime_types.py  test_sanity.py
tests/binaries/: csv2  jpg1  plaintext3  xml2
tests/binaries/abs/: abs
tests/binaries/find-me/: find-me
tests/binaries/fuzz_targets/: csv1  jpg1.txt  jpg11.txt  json1  json2  plaintext1  plaintext2  xml1  xml3
tests/binaries/fuzz_targets/jpg/default/: cmdline  fuzzer_setup
tests/binaries/hang/: Makefile  hang  hang.c
tests/binaries/jpg1/default/: fuzzer_setup
tests/binaries/meme/: meme
tests/binaries/safe/: Makefile  safe
tests/binaries/segv/: Makefile  segv  segv.c
tests/binaries/stack-dump/: stack-dump.txt
