[tool.poetry]
name = "fuzzywuzzy"
version = "0.1.0"
description = ""
authors = ["Hamish Cox <h@mish.cx>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fuzzer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
black = "23.9.1"
tqdm = "4.66.1"
pytest = "^7.4.2"
click = "^8.1.7"
python-magic = "^0.4.27"
rich = "^13.7.0"
makeelf = "^0.3.4"

[tool.poetry.scripts]
fuzzywuzzy = 'fuzzer:cli'
harness-bench = 'fuzzer.harness.bench:main'
inprocess-harness-main = 'fuzzer.harness.inprocess:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"      # I hate python.
testpaths = ["tests"]
addopts = "--color=yes"
xfail_strict = true
